--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -6,6 +6,11 @@
 html,
 body {
   height: 100%;
+  margin: 0;
+  /* Odstraníme margin z okrajů stránky */
+  padding: 0;
+  /* Odstraníme padding z okrajů stránky */
+  height: 100%;
   background-color: rgb(236, 236, 236);
 }
 
@@ -38,8 +43,16 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 123, 255, 0.3);
 }
 
 .menu_item {
   margin: 10px;
+  color: black;
+  text-decoration: none;
+  opacity: 100%;
 }
