responsive design, updated list of books, detail of a book

--- a/src/app/admin/books/[id]/styles.css
+++ b/src/app/admin/books/[id]/styles.css
@@ -10,7 +10,7 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  width: 500px;
+  width: 80%;
 }
 
 .form-row {
@@ -41,7 +41,7 @@ input {
   box-sizing: border-box;
 }
 
-button {
+.submit-button {
   width: 100%;
   padding: 10px;
   background-color: #007bff;
@@ -53,4 +53,10 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+
+@media (min-width: 600px) {
+  .form {
+    width: 500px;
+  }
 }
