--- a/src/app/admin/books/styles.css
+++ b/src/app/admin/books/styles.css
@@ -28,6 +28,7 @@ tr:hover {
   color: red;
   border: none;
   background-color: white;
+  cursor: pointer;
 }
 
 .edit-icon {
@@ -60,6 +61,7 @@ td {
   justify-content: center;
   margin-left: 10%;
   margin-right: 10%;
+  margin-top: 50px;
 }
 
 .create-link {
@@ -77,4 +79,14 @@ td {
   background-color: #28a745;
   border-radius: 3%;
   margin-right: 8px;
+}
+
+.create-paragraph {
+  display: none;
+}
+
+@media (min-width: 600px) {
+  .create-paragraph {
+    display: inline;
+  }
 }
