--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -7,35 +7,37 @@ html,
 body {
   height: 100%;
   margin: 0;
-  /* Odstraníme margin z okrajů stránky */
   padding: 0;
-  /* Odstraníme padding z okrajů stránky */
   height: 100%;
   background-color: rgb(236, 236, 236);
 }
 
 
-.full_page {
+.full-page {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
 }
 
-.homepage_texts {
+.homepage-texts {
   background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 
 }
+
 
 .title {
   color: black;
 }
 
-.home_image {
-  max-height: 80vh;
+.home-image {
+  max-height: 60vh;
   margin-top: 40px;
 }
 
@@ -50,9 +52,20 @@ body {
   background-color: rgba(0, 123, 255, 0.3);
 }
 
-.menu_item {
+.menu-item {
   margin: 10px;
   color: black;
   text-decoration: none;
   opacity: 100%;
+}
+
+@media (min-width: 800px) {
+  .full-page {
+    flex-direction: row;
+    margin-top: 0;
+  }
+
+  .home-image {
+    max-height: 80vh;
+  }
 }
