--- a/src/components/book/styles.css
+++ b/src/components/book/styles.css
@@ -2,7 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  max-width: 150px;
+  text-align: center;
   margin: 10px;
+
 }
 
 .book_view_img {
